--- a/Layout/GF/package.json
+++ b/Layout/GF/package.json
@@ -33,16 +33,18 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
+    "ng2-nouislider": "^1.7.7",
     "ngx-breadcrumbs": "0.0.3",
     "ngx-mask": "^2.1.19",
     "ngx-owl-carousel": "^2.0.2",
     "ngx-slick": "^0.1.3",
+    "nouislider": "^11.0.3",
     "rxjs": "^5.5.2",
     "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.0.28",
+    "@angular-devkit/core": "0.0.29",
     "@angular/cli": "1.5.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
