--- a/Layout/GF/package.json
+++ b/Layout/GF/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
     "@types/jquery": "^3.3.0",
+    "angular-calendar": "^0.23.6",
     "angular-captcha": "^2.1.0",
     "angular-star-rating": "^3.0.8",
     "bootstrap": "^4.0.0",
